k8s/istio/kiali-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app: kiali
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiali
  template:
    metadata:
      labels:
        app: kiali
    spec:
      containers:
      - name: kiali
        image: quay.io/kiali/kiali:v1.86
        ports:
        - containerPort: 20001
        volumeMounts:
        - name: kiali-configuration
          mountPath: /kiali-configuration
        - name: kiali-cert
          mountPath: /kiali-cert
        - name: kiali-secret
          mountPath: /kiali-secret
      volumes:
      - name: kiali-configuration
        configMap:
          name: kiali
      - name: kiali-cert
        secret:
          secretName: istio.kiali-service-account
          optional: true
      - name: kiali-secret
        secret:
          secretName: kiali
          optional: true
