k8s/istio/loadgenerator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  namespace: hipster-shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loadgenerator
  template:
    metadata:
      labels:
        app: loadgenerator
    spec:
      containers:
      - name: main
        image: gcr.io/google-samples/microservices-demo/loadgenerator@sha256:02b024e94b5c85cf9bb28e3861fe63e38f3ca0e45609726a6a0ef00b5b4034b3
        resources:
          requests:
            cpu: 300m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
